--- a/config/storage.yml
+++ b/config/storage.yml
@@ -1,6 +1,10 @@
 test:
   service: Disk
   root: <%= Rails.root.join("tmp/storage") %>
+development:
+  service: Disk
+production:
+  service: S3
 
 local:
   service: Disk
