--- a/config/storage.yml
+++ b/config/storage.yml
@@ -15,8 +15,8 @@ amazon:
   service: S3
   access_key_id:     <%= ENV["AWS_ACCESS_KEY"] %>
   secret_access_key: <%= ENV["AWS_SECRET_KEY"] %>
-  region:            <%= ENV["AWS_REGION"] %>
-  bucket:            <%= ENV["AWS_BUCKET"] %>
+  region:            <%= ENV["AWS_REGION"] || "ap-northeast-1" %>
+  bucket:            <%= ENV["AWS_BUCKET"] || "sweetslogbucket" %>
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
