--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hotwired/turbo-rails": "^8.0.13",
     "@tailwindcss/cli": "^4.1.3",
     "jquery": "^3.7.1",
+    "stimulus-autocomplete": "^3.1.0",
     "tailwindcss": "^4.1.3"
   }
 }
